# quicker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  mypy.ini  pyproject.toml
backend/music/: required.txt
backend/src/: config.py  exceptions.py  get_jwt_tokens.py  main.py
backend/src/api/: dependencies.py
backend/src/api/routers/: auth.py  music.py
backend/src/api/schemas/: music.py
backend/src/api/schemas/music/: playlist.py  track.py
backend/src/api/services/: music.py
backend/src/api/services/utils/: digital_ocean_spaces.py  get_jwt_tokens.py  spotify.py
backend/src/database/: memcached.py
backend/src/repositories/: abstract.py  memcached.py
backend/src/services/: music.py
backend/src/services/helpers/: digital_ocean_spaces.py  exceptions.py  get_jwt_tokens.py  spotify.py  youtube.py
backend/src/services/utils/: digital_ocean_spaces.py  get_jwt_tokens.py  spotify.py  youtube.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/Header/: Header.jsx
