[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Grigory Malanchuk <grigorymalanchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
spotipy = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
