[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Grigory Malanchuk <grigorymalanchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
spotipy = "^2.23.0"
pytube = "^15.0.0"
boto3 = "^1.34.32"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pymemcache = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
skip = ["venv"]
lines_after_imports = 2
